[gd_scene load_steps=6 format=3 uid="uid://d1j5t2fieeagr"]

[ext_resource type="ArrayMesh" uid="uid://c5081we10o86s" path="res://Assets/Meshes/floortilebevel.obj" id="1"]
[ext_resource type="Script" path="res://Scenes/FloorTile3D.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dwf4e44ur7ioj" path="res://Assets/tile3d_black_rim.png" id="3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gugsq"]
albedo_color = Color(0.458824, 0.458824, 0.458824, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_2tfqc"]
size = Vector3(1, 0.06, 1)

[node name="FloorTile3D" type="MeshInstance3D" groups=["selectable", "tile"]]
material_override = SubResource("StandardMaterial3D_gugsq")
mesh = ExtResource("1")
script = ExtResource("2")

[node name="StaticBody3D" type="StaticBody3D" parent="." groups=["proximity"]]
collision_mask = 17
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_2tfqc")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.055, 0)
visible = false
axis = 1
double_sided = false
alpha_cut = 2
texture = ExtResource("3")

[connection signal="input_event" from="StaticBody3D" to="." method="_on_StaticBody_input_event"]
[connection signal="mouse_entered" from="StaticBody3D" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody3D" to="." method="_on_StaticBody_mouse_exited"]
